--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -37,6 +37,10 @@ h3 {
   margin: 0 auto;
 }
 
+#audio{
+  /* display: none; */
+}
+
 .b-video{
   /* background-image: linear-gradient(rgba(50, 11, 223, 0.3),rgba(12, 3, 20, 0.795)); */
   position: absolute;
@@ -73,12 +77,8 @@ h3 {
 .summary {
   border-bottom: 1.5px solid #1098ad;
 }
-.skills {
-  border-bottom: 1.5px solid #1098ad;
-}
-.skills ol{
-  list-style: none;
-}
+
+
 .projects {
   border-bottom: 1.5px solid #1098ad;
 }
@@ -108,4 +108,48 @@ list-style: none;
 }
 .personalDetails ol {
 list-style: none;
+}
+
+/* -------------------------------------------------------------------------------------Skills------------------------------------------------------------------------- */
+.skills {
+  border-bottom: 1.5px solid #1098ad;
+  display: flex;
+}
+
+.skills img,
+.contact img{
+  width: 50px;
+  height: auto;
+  padding:5px 5px;
+  
+}
+
+.skills div{
+  padding: 15px 0 15px 0;
+  
+
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  /* border-bottom: 1px dotted black; */
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
