--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,32 +3,34 @@
   padding: 0;
 }
 
-
 :root {
-  --color-0:#fff;
-  --color-1: #61892F;
-  --color-2: #86C232;
+  --color-0: #fff;
+  --color-1: #61892f;
+  --color-2: #86c232;
   --color-3: #222629;
-  --color-4: #474B4F;
-  --color-5 :#6B6E70;
+  --color-4: #474b4f;
+  --color-5: #6b6e70;
 
-  --color-6: #1F2605;
-  --color-7: #1F6521;
-  --color-8: #53900F;
-  --color-9: #A4A71E;
-  --color-10: #D6CE15;
+  --color-6: #1f2605;
+  --color-7: #1f6521;
+  --color-8: #53900f;
+  --color-9: #a4a71e;
+  --color-10: #d6ce15;
 
-  --color-11: #0B0C10; 
+  --color-11: #0b0c10;
   --color-12: #000;
+}
 
+html {
+  font-size: 62.5%;
 }
 
 body {
   font-family: sans-serif;
   position: relative;
   text-align: center;
-  color: var(--color-10);
-  background-color:var(--color-6);
+  /* color: var(--color-10); */
+  /* background-color:var(--color-6); */
 }
 
 h1,
@@ -36,59 +38,51 @@ h2,
 h3 {
   padding-top: 10px;
   font-family: "Raleway", sans-serif;
-  }
+  text-transform: uppercase;
+}
 
 h1 {
-  color: var(--color-0);
-  font-size: 100px;
+  color: var(--color-6);
+  font-size: 4.8rem;
 }
 
 h2 {
   color: var(--color-1);
-  font-size: 45px;
+  font-size: 2.4rem;
 }
 
 h3 {
   color: var(--color-1);
-  font-size: 25px;
+  font-size: 1.8rem;
 }
 
 .container {
-  width: 1200px;
+  /* width: 140rem; */
+  padding: 5%;
   margin: 0 auto;
 }
 
-#audio{
-  /* display: none; */
-}
-
-.b-video{
-  /* background-image: linear-gradient(rgba(50, 11, 223, 0.3),rgba(12, 3, 20, 0.795)); */
+/* .b-video {
+  / * background-image: linear-gradient(rgba(50, 11, 223, 0.3),rgba(12, 3, 20, 0.795)); * /
   position: absolute;
   right: 0;
   bottom: 0;
   z-index: -100;
-}
+} */
 
-@media (max-aspect-ratio: 16/9)
-{
-  .b-video{
+/* @media (max-aspect-ratio: 16/9) {
+  .b-video {
     width: auto;
-    height:100% ;
+    height: 100%;
   }
 }
 
-
-@media (min-aspect-ratio: 16/9)
-{
-  .b-video{
+@media (min-aspect-ratio: 16/9) {
+  .b-video {
     width: 100%;
-    height:auto ;
+    height: auto;
   }
-}
-
-
-
+} */
 
 /* -------------------------------------------------------------------------------------Tool Tip------------------------------------------------------------------------- */
 .tooltip {
@@ -114,114 +108,187 @@ h3 {
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
+/* -------------------------------------------------------------------------------------Heading------------------------------------------------------------------------- */
+.main-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 9.6rem;
+}
+
+.nav ul {
+  list-style: none;
+  display: flex;
+  gap: 10px;
+}
+.nav ul li {
+  padding: 1rem;
+  border-radius: 0.8rem;
+  background-color: var(--color-2);
+}
+
+.nav ul li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: var(--color-3);
+  font-size: 1.4rem;
+  font-weight: 500;
+}
 
 /* -------------------------------------------------------------------------------------Heading------------------------------------------------------------------------- */
-.heading em {
-  word-spacing: 10px;
-  letter-spacing: 2px;
-  line-height: 2em;
+#heading h1 {
+  word-spacing: 1rem;
+  letter-spacing: 1.2rem;
+  line-height: 2rem;
 }
-.heading {
-padding-top: 76px;
-padding-bottom: 56px;
+#heading {
+  /* padding-top: 76px;
+  padding-bottom: 56px; */
 }
-
-
 
 /* -------------------------------------------------------------------------------------About Me------------------------------------------------------------------------- */
 .aboutMe {
-  border-bottom: 1.5px solid var(--color-7);
+  border-bottom: 1.5px solid var(--color-2);
   padding: 15px 0;
+  text-align: left;
+  font-size: 1.4rem;
+  line-height: 2.4rem;
 }
 
-.aboutMe p{
+.aboutMe p {
   color: var(--color-5);
-  padding: 10px 0 ;
+  padding: 4.8rem 0 2.4rem 0;
 }
-
 
 /* -------------------------------------------------------------------------------------Skills------------------------------------------------------------------------- */
+.stats {
+  display: flex;
+  justify-content: flex-start;
+  gap: 25px;
+  border-bottom: 1.5px solid var(--color-2);
+  padding: 4.8rem 0 2.4rem 0;
+}
+
 .skills {
-  border-bottom: 1.5px solid var(--color-7);
+  border-bottom: 1.5px solid var(--color-2);
   display: flex;
 }
 
 .skills img,
-.contact img,
-.stats img{
+.stats img {
   width: 56px;
   height: auto;
-  padding:5px 10px;
-  
+  padding: 5px 10px;
 }
 
-.skills div{
-  padding: 15px 0 15px 0;
-  
-
+.contact img {
+  width: 36px;
+  height: auto;
+  padding: 5px 10px;
 }
 
+.skills div {
+  padding: 1.6rem 0 1.6rem 0;
+}
 
 /* -------------------------------------------------------------------------------------projects------------------------------------------------------------------------- */
 .projects {
   border-bottom: 1.5px solid var(--color-7);
-  display: flex;
-  color:var(--color-5);
+  /* display: flex;
+  flex-direction: column;
+  justify-content: flex-start; */
+  color: var(--color-5);
+  text-align: left;
 }
 
-.projects ul{
+.projects div {
+  padding: 1.6rem 0 0 0;
+}
+
+.project-description ul {
   text-decoration: none;
-  list-style-type: none;  
-}
-.projects div{
- 
-  padding: 5px 0 5px 0;
+  list-style: inside;
+  padding: 3.6rem 0 1.8rem 0;
 }
 
+.project-description ul li {
+  font-size: 1.4rem;
+
+  line-height: 2.4rem;
+}
 
 /* -------------------------------------------------------------------------------------Work Experince------------------------------------------------------------------------- */
 
 .workExperince {
   border-bottom: 1.5px solid var(--color-7);
-}
-.workExperince ol {
-  list-style: none;
+  text-align: left;
+  padding: 2.4rem 0 4.8rem 0;
 }
 
-.workExperince ol p{
-color: var(--color-5);
+.workExperince h3 {
+  padding: 2.4rem 0 1.4rem 0;
+}
+
+.workExperince div p {
+  color: var(--color-5);
+  font-size: 1.4rem;
+  line-height: 2.4rem;
+  text-align: justify;
+}
+
+.workExperince div em {
+  font-size: 1.2rem;
+  padding: 1.4rem 0;
 }
 
 /* -------------------------------------------------------------------------------------Academic Qualifications------------------------------------------------------------------------- */
 
 .acdemicQualifications {
   border-bottom: 1.5px solid var(--color-7);
+  padding: 3.6rem 0 2.6rem 0;
+  text-align: left;
 }
-.acdemicQualifications ol{
-list-style: none;
+.acdemicQualifications ul {
+  list-style: inside;
+}
+.acdemicQualifications h2 {
+  padding-bottom: 2.4rem;
+}
+.acdemicQualifications ul li {
+  color: var(--color-5);
+  font-size: 1.4rem;
+  line-height: 2.4rem;
 }
 
 /* ------------------------------------------------------------------------------------Certifications------------------------------------------------------------------------- */
 
 .certificationsTraining {
   border-bottom: 1.5px solid var(--color-7);
-}
-.certificationsTraining ol{
-  list-style: none;
+  text-align: left;
+  padding: 3.6rem 0 1.8rem 0;
 }
 
+.certificationsTraining h2 {
+  padding-bottom: 2.4rem;
+}
+.certificationsTraining ul {
+  list-style: inside;
+  color: var(--color-5);
+  font-size: 1.4rem;
+  line-height: 2.4rem;
+}
 
 /* -------------------------------------------------------------------------------------stats------------------------------------------------------------------------- */
-.stats{
-/* display: flexbox; */
-  border-bottom: 1.5px solid var(--color-7);
-}
 
 /* -------------------------------------------------------------------------------------contacts------------------------------------------------------------------------- */
 
-.contacts {
-  border-bottom: 1.5px solid var(--color-7);
+.contact {
+  padding: 3.6rem 0 1.8rem 0;
+  /* position: absolute;
+  bottom: 0;
+  left: 45%; */
+  margin-bottom: 0;
 }
-.contacts ol {
-list-style: none;
+.contact h2 {
+  padding-bottom: 2.4rem;
 }
