--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,14 +21,11 @@
   --color-12: #000; }
 
 html {
-  font-size: 62.5%; }
-
-body {
-  font-family: sans-serif;
-  position: relative;
-  text-align: center;
-  /* color: var(--color-10); */
-  /* background-color:var(--color-6); */ }
+  font-size: 62.5%;
+  font-family: "Open Sans", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings: "wdth" 100; }
 
 h1,
 h2,
@@ -38,7 +35,7 @@ h3 {
   text-transform: uppercase; }
 
 h1 {
-  color: var(--color-6);
+  color: var(--color-0);
   font-size: 4.8rem; }
 
 h2 {
@@ -48,11 +45,6 @@ h2 {
 h3 {
   color: var(--color-1);
   font-size: 1.8rem; }
-
-.container {
-  /* width: 140rem; */
-  padding: 5%;
-  margin: 0 auto; }
 
 /* .b-video {
   / * background-image: linear-gradient(rgba(50, 11, 223, 0.3),rgba(12, 3, 20, 0.795)); * /
@@ -100,161 +92,8 @@ h3 {
   position: sticky;
   top: 0;
   z-index: 10;
-  background-color: #ffe4c4;
+  background-color: #159957;
+  background-image: linear-gradient(120deg, #155799, #159957);
   color: #ffffff;
+  text-align: center;
   padding: 3rem 20px; }
-
-.main-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 9.6rem; }
-
-.nav ul {
-  list-style: none;
-  display: flex;
-  gap: 10px; }
-
-.nav ul li {
-  padding: 1rem;
-  border-radius: 0.8rem;
-  background-color: var(--color-2); }
-
-.nav ul li a {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: var(--color-3);
-  font-size: 1.4rem;
-  font-weight: 500; }
-
-/* -------------------------------------------------------------------------------------Heading------------------------------------------------------------------------- */
-#heading h1 {
-  word-spacing: 1rem;
-  letter-spacing: 1.2rem;
-  line-height: 2rem; }
-
-#heading {
-  /* padding-top: 76px;
-  padding-bottom: 56px; */ }
-
-/* -------------------------------------------------------------------------------------About Me------------------------------------------------------------------------- */
-.aboutMe {
-  border-bottom: 1.5px solid var(--color-2);
-  padding: 15px 0;
-  text-align: left;
-  font-size: 1.4rem;
-  line-height: 2.4rem; }
-
-.aboutMe p {
-  color: var(--color-5);
-  padding: 4.8rem 0 2.4rem 0; }
-
-/* -------------------------------------------------------------------------------------Skills------------------------------------------------------------------------- */
-.stats {
-  display: flex;
-  justify-content: flex-start;
-  gap: 25px;
-  border-bottom: 1.5px solid var(--color-2);
-  padding: 4.8rem 0 2.4rem 0; }
-
-.skills {
-  border-bottom: 1.5px solid var(--color-2);
-  display: flex; }
-
-.skills img,
-.stats img {
-  width: 56px;
-  height: auto;
-  padding: 5px 10px; }
-
-.contact img {
-  width: 36px;
-  height: auto;
-  padding: 5px 10px; }
-
-.skills div {
-  padding: 1.6rem 0 1.6rem 0; }
-
-/* -------------------------------------------------------------------------------------projects------------------------------------------------------------------------- */
-.projects {
-  border-bottom: 1.5px solid var(--color-7);
-  /* display: flex;
-  flex-direction: column;
-  justify-content: flex-start; */
-  color: var(--color-5);
-  text-align: left; }
-
-.projects div {
-  padding: 1.6rem 0 0 0; }
-
-.project-description ul {
-  text-decoration: none;
-  list-style: inside;
-  padding: 3.6rem 0 1.8rem 0; }
-
-.project-description ul li {
-  font-size: 1.4rem;
-  line-height: 2.4rem; }
-
-/* -------------------------------------------------------------------------------------Work Experince------------------------------------------------------------------------- */
-.workExperince {
-  border-bottom: 1.5px solid var(--color-7);
-  text-align: left;
-  padding: 2.4rem 0 4.8rem 0; }
-
-.workExperince h3 {
-  padding: 2.4rem 0 1.4rem 0; }
-
-.workExperince div p {
-  color: var(--color-5);
-  font-size: 1.4rem;
-  line-height: 2.4rem;
-  text-align: justify; }
-
-.workExperince div em {
-  font-size: 1.2rem;
-  padding: 1.4rem 0; }
-
-/* -------------------------------------------------------------------------------------Academic Qualifications------------------------------------------------------------------------- */
-.acdemicQualifications {
-  border-bottom: 1.5px solid var(--color-7);
-  padding: 3.6rem 0 2.6rem 0;
-  text-align: left; }
-
-.acdemicQualifications ul {
-  list-style: inside; }
-
-.acdemicQualifications h2 {
-  padding-bottom: 2.4rem; }
-
-.acdemicQualifications ul li {
-  color: var(--color-5);
-  font-size: 1.4rem;
-  line-height: 2.4rem; }
-
-/* ------------------------------------------------------------------------------------Certifications------------------------------------------------------------------------- */
-.certificationsTraining {
-  border-bottom: 1.5px solid var(--color-7);
-  text-align: left;
-  padding: 3.6rem 0 1.8rem 0; }
-
-.certificationsTraining h2 {
-  padding-bottom: 2.4rem; }
-
-.certificationsTraining ul {
-  list-style: inside;
-  color: var(--color-5);
-  font-size: 1.4rem;
-  line-height: 2.4rem; }
-
-/* -------------------------------------------------------------------------------------stats------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------------------contacts------------------------------------------------------------------------- */
-.contact {
-  padding: 3.6rem 0 1.8rem 0;
-  /* position: absolute;
-  bottom: 0;
-  left: 45%; */
-  margin-bottom: 0; }
-
-.contact h2 {
-  padding-bottom: 2.4rem; }
