--- a/src/Components/Effects/typewriter.css
+++ b/src/Components/Effects/typewriter.css
@@ -4,6 +4,15 @@
   --typewriterCharacters: 24;
 }
 
+.container-typewriter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  min-height: 100vh;
+}
+
 .typewriter-effect {
   /* font-size: clamp(1rem, 3vw + 1rem, 4rem); */
   position: relative;
@@ -11,6 +20,7 @@
   position: relative;
 
   width: max-content;
+  color: blue;
 }
 
 .typewriter-effect::before,
